fixed layout issue on safari

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,9 @@ html {
 }
 
 body {
-  height: 100vh;
+  height: auto;
   background-color: #151515;
+
 }
 
 * {
